[package]
name = "json-test-connector"
description = "Connector that generates JSON test data"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
async-trait = { workspace = true }
futures = { version = "0.3", default-features = false }
anyhow = { workspace = true }
tokio = { default-features = false, features = ["time"], workspace = true }
serde = { default-features = false, features = ["derive"], workspace = true }

fluvio = { path = "../../crates/fluvio/", features = ["smartengine"]}
fluvio-connector-common = { path = "../../crates/fluvio-connector-common/", features = ["derive"] }

