[package]
name = "sink-test-connector"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Connector that reads data from a topic and prints to stdout"
edition = "2024"
publish = false



[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde = { default-features = false, features = ["derive"], workspace = true }

fluvio = { path = "../../crates/fluvio/", features = ["smartengine"]}
fluvio-connector-common = { path = "../../crates/fluvio-connector-common/", features = ["derive"] }

