[package]
name = "sink-test-connector"
description = "Connector that reads data from a topic and prints to stdout"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde = { default-features = false, features = ["derive"], workspace = true }

fluvio = { path = "../../crates/fluvio/", features = ["smartengine"]}
fluvio-connector-common = { path = "../../crates/fluvio-connector-common/", features = ["derive"] }

