[package]
name = "cargo-builder"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Build Cargo project programmability"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false



[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
convert_case = { workspace = true }
derive_builder = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context", "env", "wrap_help", "suggestions"], default-features = false }
cargo_metadata = "0.15.0"
