[package]
name = "fluvio-auth"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/infinyon/fluvio"
description = "Authorization framework for Fluvio"
publish = false


[lib]
name = "fluvio_auth"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.41"
serde = { version = "1.0.103", features = ['derive'] }
serde_json = "1.0.59"
thiserror = { workspace = true }
tracing = { workspace = true }
x509-parser = "0.15.0"

fluvio-controlplane-metadata = { path = "../fluvio-controlplane-metadata" }
fluvio-future = { version = "0.4.0", features = ["net", "openssl_tls"] }
fluvio-protocol = { path = "../fluvio-protocol" }
fluvio-socket = { path = "../fluvio-socket" }
fluvio-types = { path = "../fluvio-types" }
flv-tls-proxy = { version = "0.6.0" }
futures-util = { version = "0.3.5" }
