[package]
name = "fluvio-auth"
description = "Authorization framework for Fluvio"
version = "0.0.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false


[lib]
name = "fluvio_auth"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true  }
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
x509-parser = { workspace = true }

fluvio-controlplane-metadata = { workspace = true  }
fluvio-future = { workspace = true, features = ["net"] }
fluvio-protocol = { workspace = true }
fluvio-socket = { workspace = true }
flv-tls-proxy = { workspace = true }

