[package]
name = "fluvio-benchmark"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio benchmarking tool"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
bytesize = { workspace = true, features = ['serde'] }
chrono = { workspace = true, features = ['serde']}
clap = { workspace = true, features = ["std","derive"] }
derive_builder = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
hdrhistogram = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
tokio = { workspace = true, features = ['macros'] }
rayon = { workspace = true }
serde = { workspace = true , features = ['derive'] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = {workspace = true }

fluvio = { workspace = true  }
fluvio-future = { workspace = true, features = [
    'task',
    'future',
    'sync',
    'subscriber',
] }
