[package]
name = "fluvio-benchmark"
version = "0.0.0"
edition = "2024"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio benchmarking tool"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = { workspace = true }
flume = { workspace = true }
bytesize = { workspace = true, features = ['serde'] }
clap = { workspace = true, features = ["std","derive"] }
derive_builder = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
hdrhistogram = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true, features = ['sync', 'macros'] }
madato = { workspace = true }
serde = { workspace = true , features = ['derive'] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = {workspace = true }

fluvio = { workspace = true  }
fluvio-future = { workspace = true, features = [
    'task',
    'future',
    'sync',
    'subscriber',
] }
