[package]
name = "fluvio-channel-cli"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio CLI frontend (with channels support)"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

[[bin]]
name = "fluvio-channel"
path = "src/bin/main.rs"
doc = false

[lib]
name = "fluvio_channel_cli"
path = "src/lib.rs"

[features]
default = ["fluvio-future", "fluvio-types"]

[dependencies]
colored = "2"
color-eyre = { version = "0.6.0", default-features = false }
clap = { version = "4.0.2", features = ["std", "derive"], default-features = false }
tracing = "0.1.19"
cfg-if = "1.0"
dirs = "4.0.0"

fluvio-cli-common = { path = "../fluvio-cli-common" }
fluvio-channel = { path = "../fluvio-channel" }
fluvio-future = { version = "0.4.0", features = ["task", "subscriber"], optional = true }
fluvio-types = { path = "../fluvio-types", default-features = false, optional = true }
fluvio-package-index = { path = "../fluvio-package-index" }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
rand = "0.8.4"
