[package]
name = "fluvio-channel-cli"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio CLI frontend (with channels support)"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

[[bin]]
name = "fluvio-channel"
path = "src/bin/main.rs"
doc = false

[lib]
name = "fluvio_channel_cli"
path = "src/lib.rs"

[features]
default = ["fluvio-future", "fluvio-types"]

[dependencies]
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"], default-features = false }
tracing = { workspace = true }
cfg-if = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }

fluvio-cli-common = { workspace = true, features = ["serde"] }
fluvio-channel = { workspace = true  }
fluvio-future = { workspace = true, features = ["task", "subscriber", "native2_tls"], optional = true }
fluvio-types = { workspace = true,  default-features = false, optional = true }
fluvio-package-index = { workspace = true  }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "3.1.0"
rand = { workspace = true }
