[package]
name = "fluvio-channel-cli"
description = "Fluvio CLI frontend (with channels support)"
version = "0.0.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "fluvio-channel"
path = "src/bin/main.rs"
doc = false

[lib]
name = "fluvio_channel_cli"
path = "src/lib.rs"

[features]
default = ["fluvio-future", "fluvio-types"]

[dependencies]
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"], default-features = false }
tracing = { workspace = true }
cfg-if = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }

fluvio-cli-common = { workspace = true, features = ["serde"] }
fluvio-channel = { workspace = true  }
fluvio-future = { workspace = true, features = ["task", "subscriber"], optional = true }
fluvio-types = { workspace = true,  default-features = false, optional = true }
fluvio-package-index = { workspace = true  }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "3.0.3"
rand = { workspace = true }
