[package]
name = "fluvio-channel"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio channels support"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

[lib]
name = "fluvio_channel"
path = "src/lib.rs"

[features]
default = ["fluvio-types"]

[dependencies]
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"], default-features = false }
cfg-if = { workspace = true }
semver = "1.0.0"
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true}
toml = { workspace = true, default-features = true}
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

fluvio-types = { workspace = true,  optional = true }