[package]
name = "fluvio-channel"
version = "0.0.0"
edition = "2024"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio channels support"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false

[lib]
name = "fluvio_channel"
path = "src/lib.rs"

[features]
default = ["fluvio-types"]

[dependencies]
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"], default-features = false }
cfg-if = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true, features = ["display", "parse"]}
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

fluvio-types = { workspace = true,  optional = true }