[package]
name = "fluvio-cli"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio CLI"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false
default-run = "fluvio"

[lib]
name = "fluvio_cli"
path = "src/lib.rs"

[[bin]]
name = "fluvio"
path = "src/bin/main.rs"
doc = false

[features]
default = ["consumer", "k8s", "producer-file-io"]
consumer = [
    "atty",
    "ctrlc",
    "content_inspector",
    "fluvio-types",
    "fluvio-future",
    "fluvio-sc-schema",
    "fluvio-spu-schema",
]
k8s = [
    "k8-client",
    "k8-config",
    "fluvio-cluster",
]
smartengine = ["fluvio-smartengine/default"]
producer-file-io = ["fluvio-cli-common/file-records"]

[dependencies]

async-net = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
bytesize = { workspace = true, features = ['serde'] }
clap = { workspace = true, features = ["std", "derive", "string", "help", "usage", "env", "error-context"] }
clap_complete = "4.0.2"
dirs = { workspace = true }
indicatif = { workspace = true }
eyre = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
home = { workspace = true }
current_platform = "0.2"
comfy-table = { workspace = true }
atty = { version = "0.2.14", optional = true }
ctrlc = { version = "3.1.3", optional = true }
colored = { workspace = true }
handlebars = "4"
content_inspector = { optional = true, workspace = true }
flate2 = { workspace = true }
crossterm = { version = "0.27.0", features = ['event-stream']}
tui = { version = "0.19.0", default-features = false, features = ['crossterm'] }
futures = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
humantime = { workspace = true }
static_assertions = { workspace = true }
sysinfo = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true,  features = ["macros"] }
tracing = { workspace = true }
which = { workspace = true }
url = { workspace = true }

# Fluvio dependencies
k8-config = { workspace = true, optional = true }
k8-client = { workspace = true, optional = true }
k8-types = { workspace = true , features = ["core"] }
fluvio-cluster = { path = "../fluvio-cluster", default-features = false, features = ["cli"], optional = true }

fluvio = { workspace = true  }
fluvio-socket = { workspace = true }
fluvio-command = { workspace = true  }
fluvio-package-index = { workspace = true }
fluvio-extension-common = { workspace = true,  features = ["target"] }
fluvio-channel = { workspace = true }
fluvio-cli-common = { workspace = true  }
fluvio-hub-util = { workspace = true  }
fluvio-smartengine = { workspace = true,  features = ["transformation"]}
fluvio-protocol = { workspace = true, features=["record","api"] }
fluvio-smartmodule = { workspace = true  }
fluvio-controlplane-metadata = { workspace = true, features = ["smartmodule"] }

# Optional Fluvio dependencies
fluvio-types = { workspace = true,  optional = true }
fluvio-future = { workspace = true, features = ["fs", "io", "subscriber", "native2_tls"], optional = true }
fluvio-sc-schema = { workspace = true,  features = ["use_serde"], optional = true }
fluvio-spu-schema = { workspace = true, optional = true }


[dev-dependencies]
fluvio-future = { workspace = true, features = ["fixture"] }
