[package]
name = "fluvio-cli"
version = "0.0.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio CLI"
repository = "https://github.com/infinyon/fluvio"
license = "Apache-2.0"
publish = false
default-run = "fluvio"

[lib]
name = "fluvio_cli"
path = "src/lib.rs"

[[bin]]
name = "fluvio"
path = "src/bin/main.rs"
doc = false

[features]
default = ["consumer", "k8s", "producer-file-io"]
consumer = [
    "ctrlc",
    "content_inspector",
    "fluvio-types",
    "fluvio-future",
    "fluvio-sc-schema",
    "fluvio-spu-schema",
]
k8s = [
    "k8-client",
    "k8-config",
    "fluvio-cluster",
]
smartengine = ["fluvio-smartengine/default"]
producer-file-io = ["fluvio-cli-common/file-records"]

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
bytesize = { workspace = true, features = ['serde'] }
clap = { workspace = true, features = ["std", "derive", "string", "help", "usage", "env", "error-context"] }
clap_complete = { workspace = true }
indicatif = { workspace = true }
sha2 = { workspace = true }
home = { workspace = true }
current_platform = { workspace = true }
comfy-table = { workspace = true }
ctrlc = { workspace = true, optional = true }
colored = { workspace = true }
handlebars = { workspace = true }
content_inspector = { optional = true, workspace = true }
flate2 = { workspace = true }
crossterm = { workspace = true, features = ['event-stream',"bracketed-paste", "windows","events"]}
tui = { workspace = true, features = ['crossterm'] }
futures = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
humantime = { workspace = true }
mimalloc = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true,  features = ["macros"] }
tracing = { workspace = true }
which = { workspace = true }

# Fluvio dependencies
k8-config = { workspace = true, optional = true }
k8-client = { workspace = true, optional = true }
k8-types = { workspace = true , features = ["core"] }
fluvio-cluster = { path = "../fluvio-cluster", default-features = false, features = ["cli"], optional = true }

fluvio = { workspace = true }
fluvio-auth = { workspace = true }
fluvio-benchmark = { workspace = true }
fluvio-command = { workspace = true  }
fluvio-package-index = { workspace = true }
fluvio-extension-common = { workspace = true,  features = ["target", "installation"] }
fluvio-channel = { workspace = true }
fluvio-hub-util = { workspace = true, features = ["connector-cmds"] }
fluvio-cli-common = { workspace = true, features = ["serde", "version-cmd"] }
fluvio-smartengine = { workspace = true,  features = ["transformation"]}
fluvio-protocol = { workspace = true, features=["record","api"] }
fluvio-smartmodule = { workspace = true  }
fluvio-controlplane-metadata = { workspace = true, features = ["smartmodule"] }

# Optional Fluvio dependencies
fluvio-types = { workspace = true,  optional = true }
fluvio-future = { workspace = true, features = ["fs", "io", "subscriber", "native_tls"], optional = true }
fluvio-sc-schema = { workspace = true,  features = ["use_serde"], optional = true }
fluvio-spu-schema = { workspace = true, optional = true }

# smartmodule depends on cranelift, which is not available for `arm`
[target.'cfg(not(target_arch = "arm"))'.dependencies]
fluvio-cli-common = { workspace = true, features = ["smartmodule-test"] }

[dev-dependencies]
fluvio-future = { workspace = true, features = ["fixture"] }
