[package]
name = "fluvio-cluster"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/fluvio"
description = "Tools for installing and managing Fluvio clusters"

[lib]
name = "fluvio_cluster"
path = "src/lib.rs"

[features]
cli = [
    "clap",
    "color-eyre",
    "duct",
    "comfy-table",
    "tar",
    "flate2",
    "fluvio-extension-common/target",
    "fluvio-sc-schema/use_serde",
]

[dependencies]
thiserror = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
portpicker = { workspace = true }
async-trait = "0.1.21"
colored = "2.0.0"
semver = "1.0.3"
url = "2.1.1"
serde = "1.0.115"
serde_json = "1.0.57"
serde_yaml = "0.9.17"
futures-util = "0.3"
futures-channel = { version = "0.3", features = ["sink"] }
tokio = { version = "1.3.0", features = ["macros"] }
once_cell = "1.5"

which = "4.1.0"
directories = "4.0.0"
tempfile = "3.2"
include_dir = "0.7.2"
tempdir = "0.3.7"
anyhow = { workspace = true }
async-channel = "1.6.1"
bytesize = { version = "1.1.0", features = ['serde'] }
indicatif = "0.17.0"
rand = "0.8.4"
chrono = { version = "0.4" }
color-eyre = { version = "0.6.0", default-features = false, optional = true }
clap = { workspace = true, features = [
    "std",
    "derive",
], default-features = false, optional = true }
duct = { version = "0.13", default-features = false, optional = true }
comfy-table = { version = "6.0.0", default-features = false, optional = true }
flate2 = { version = "1", default-features = false, optional = true }
tar = { version = "0.4", default-features = false, optional = true }
sysinfo = { workspace = true, default-features = false}


# External Fluvio dependencies
fluvio-helm = "0.4.1"
flv-util = "0.5.2"
k8-config = { version = "2.0.0" }
k8-client = { version = "8.0.0" }
k8-metadata-client = { version = "5.0.0" }
k8-types = { version = "0.7.0", features = ["app"] }
fluvio-command = { version = "0.2.0" }
fluvio-future = { workspace = true }

fluvio = { path = "../fluvio", default-features = false }
fluvio-extension-common = { path = "../fluvio-extension-common", optional = true }
fluvio-controlplane-metadata = { path = "../fluvio-controlplane-metadata", features = [
    "k8",
] }
fluvio-sc-schema = { path = "../fluvio-sc-schema", default-features = false }
fluvio-types = { path = "../fluvio-types" }
fluvio-channel = { path = "../fluvio-channel" }

[dev-dependencies]
fluvio-future = { workspace = true, features = ["task", "fixture"] }
