[package]
name = "fluvio-cluster"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/fluvio"
description = "Tools for installing and managing Fluvio clusters"

[lib]
name = "fluvio_cluster"
path = "src/lib.rs"

[features]
cli = [
    "clap",
    "color-eyre",
    "duct",
    "comfy-table",
    "tar",
    "flate2",
    "fluvio-extension-common/target",
    "fluvio-sc-schema/use_serde",
]

[dependencies]
thiserror = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
portpicker = { workspace = true }
async-trait = { workspace = true}
colored = { workspace = true }
semver = { workspace = true }
url = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures-util = { workspace = true}
futures-channel = { workspace = true, features = ["sink"] }
tokio = { workspace = true, features = ["macros"] }
once_cell = { workspace = true }
which = {workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
include_dir = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
bytesize = { workspace = true,  features = ['serde'] }
indicatif = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true  }
color-eyre = { workspace = true, default-features = false, optional = true }
clap = { workspace = true, features = [
    "std",
    "derive",
], default-features = false, optional = true }
duct = { workspace = true, default-features = false, optional = true }
comfy-table = { workspace = true, default-features = false, optional = true }
flate2 = { workspace = true, default-features = false, optional = true }
tar = { workspace = true , default-features = false, optional = true }
sysinfo = { workspace = true, default-features = false}


# External Fluvio dependencies
fluvio-helm = { workspace = true }
flv-util = { workspace = true }
k8-config = { workspace = true }
k8-client = { workspace = true }
k8-metadata-client = { workspace = true }
k8-types = { workspace = true, features = ["app"] }
fluvio-command = { workspace = true }
fluvio-future = { workspace = true }

fluvio = { path = "../fluvio", default-features = false }
fluvio-extension-common = { path = "../fluvio-extension-common", optional = true }
fluvio-controlplane-metadata = { path = "../fluvio-controlplane-metadata", features = [
    "k8",
] }
fluvio-sc-schema = { path = "../fluvio-sc-schema", default-features = false }
fluvio-types = { path = "../fluvio-types" }
fluvio-channel = { path = "../fluvio-channel" }

[dev-dependencies]
fluvio-future = { workspace = true, features = ["task", "fixture"] }
