[package]
name = "fluvio-cluster"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/fluvio"
description = "Tools for installing and managing Fluvio clusters"

[lib]
name = "fluvio_cluster"
path = "src/lib.rs"

[features]
cli = [
    "clap",
    "color-eyre",
    "duct",
    "comfy-table",
    "tar",
    "flate2",
    "fluvio-extension-common/target",
    "fluvio-cli-common",
    "fluvio-sc-schema/use_serde",
]

[dependencies]
thiserror = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
portpicker = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
once_cell = { workspace = true }
which = {workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
include_dir = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
bytesize = { workspace = true,  features = ['serde'] }
indicatif = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true  }
color-eyre = { workspace = true, default-features = false, optional = true }
clap = { workspace = true, features = [
    "std",
    "derive",
], optional = true }
duct = { workspace = true, optional = true }
comfy-table = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tar = { workspace = true ,  optional = true }
sysinfo = { workspace = true, default-features = false, features = ["system", "network", "disk"] }


# External Fluvio dependencies
fluvio-helm = { workspace = true }
flv-util = { workspace = true }
k8-config = { workspace = true }
k8-client = { workspace = true }
k8-types = { workspace = true, features = ["app"] }
fluvio-command = { workspace = true }
fluvio-future = { workspace = true }

fluvio = { workspace = true  }
fluvio-extension-common = { workspace = true,  features = ["installation"] }
fluvio-cli-common = { workspace = true, optional = true }
fluvio-controlplane-metadata = { workspace = true,  features = ["k8",] }
fluvio-sc-schema = { workspace = true  }
fluvio-types = { workspace = true  }
fluvio-channel = { workspace = true  }
fluvio-stream-dispatcher = { workspace = true, features = ["k8", "local"]}
dialoguer.workspace = true

[dev-dependencies]
fluvio-future = { workspace = true, features = ["task", "fixture"] }
