[package]
name = "fluvio-compression"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
categories = ["compression"]
keywords = ["fluvio", "compression"]
repository = "https://github.com/infinyon/fluvio"
description = "Fluvio Compression library"

[features]
default = ["compress"]
compress = ["bytes", "flate2", "lz4_flex", "snap", "zstd"]

[dependencies]
serde = { workspace = true,  features = ['derive'] }
thiserror = { workspace = true }

# Optional Dependencies
bytes = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
lz4_flex = { version = "0.11.1", default-features = false, features = ["safe-decode", "safe-encode", "frame"], optional = true }
snap = { version = "1", optional = true }
zstd = { version = "0.12.3", features = ['wasm'], default-features = false, optional = true }
